updated ci workflow file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Check no .next cache
         run: |
-          ls -la apps/docs/.next
-          ls -la apps/apps/.next
+          ls -la apps/docs
+          ls -la apps/apps
 
       - name: Next.JS Cache
         uses: actions/cache@v2
@@ -42,8 +42,8 @@ jobs:
 
       - name: Check .next cache exists
         run: |
-          ls -la apps/docs/.next
-          ls -la apps/apps/.next
+          ls -la apps/docs
+          ls -la apps/apps
 
       - name: Install dependencies
         run: npm install
