--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,21 +29,18 @@ jobs:
           node-version: 16
           cache: "npm"
 
-      - name: Check no .next cache
-        run: |
-          ls -la apps/docs
-          ls -la apps/web
-
-      - name: Next.JS Cache
+      - name: Cache Next.JS
+        id: cache-nextjs
         uses: actions/cache@v2
         with:
-          path: ${{ github.workspace}}/apps/*/.next/cache
+          path: ~/apps/*/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Check .next cache exists
-        run: |
-          ls -la apps/docs
-          ls -la apps/web
+      - run: |
+          ls -la ~/apps/docs
+          ls -la ~/apps/web
+          echo ${{steps.cache-nextjs.outputs.cache-hit}}
+        continue-on-error: true
 
       - name: Install dependencies
         run: npm install
