--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,10 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          ls -la
+          echo ${{ github.workspace }}
+
       - name: Check out code
         uses: actions/checkout@v2
         with:
@@ -33,13 +37,13 @@ jobs:
         id: cache-nextjs
         uses: actions/cache@v2
         with:
-          path: ~/apps/*/.next/cache
+          path: ${{ github.workspace }}/apps/*/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
 
       - run: |
-          ls -la ~/apps/docs
-          ls -la ~/apps/web
-          echo ${{steps.cache-nextjs.outputs.cache-hit}}
+          ls -la ${{ github.workspace }}/apps/docs
+          ls -la ${{ github.workspace }}/apps/web
+          echo ${{ steps.cache-nextjs.outputs.cache-hit }}
         continue-on-error: true
 
       - name: Install dependencies
