--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          ls -la
-          echo ${{ github.workspace }}
-
       - name: Check out code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
@@ -33,21 +27,23 @@ jobs:
           node-version: 16
           cache: "npm"
 
-      - name: Cache Next.JS
-        id: cache-nextjs
+      - name: Cache .turbo
         uses: actions/cache@v2
         with:
-          path: ${{ github.workspace }}/apps/*/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+          path: .turbo
+          key: turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
+          restore-keys: |
+            turbo-${{ github.job }}-${{ github.ref_name }}-
 
-      - run: |
-          ls -la ${{ github.workspace }}/apps/docs
-          ls -la ${{ github.workspace }}/apps/web
-          echo ${{ steps.cache-nextjs.outputs.cache-hit }}
-        continue-on-error: true
+      # - name: Cache Next.JS
+      #   id: cache-nextjs
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ github.workspace }}/apps/*/.next/cache
+      #     key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build All
         run: npm run build
