--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
           node-version: 16
           cache: "npm"
 
+      - run: ls -la
+      - run: ls -la .\node_modules\.cache\
+        continue-on-error: true
+
       - name: Cache .turbo
         uses: actions/cache@v2
         with:
@@ -36,9 +40,12 @@ jobs:
             turbo-${{ github.job }}-${{ github.ref_name }}-
 
       - run: ls -la
+      - run: ls -la .\node_modules\.cache\
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build All
         run: npm run build
+
+      - run: ls -la
