--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           cache: "npm"
 
       - run: ls -la
-      - run: ls -la .\node_modules\.cache\
+      - run: ls -la ./node_modules
         continue-on-error: true
 
       - name: Cache .turbo
@@ -40,7 +40,8 @@ jobs:
             turbo-${{ github.job }}-${{ github.ref_name }}-
 
       - run: ls -la
-      - run: ls -la .\node_modules\.cache\
+      - run: ls -la ./node_modules
+        continue-on-error: true
 
       - name: Install dependencies
         run: npm ci
