--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,25 +28,30 @@ jobs:
           cache: "npm"
 
       - run: ls -la
-      - run: ls -la ./node_modules
-        continue-on-error: true
 
-      - name: Cache .turbo
+      # - name: Cache .turbo
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: node_modules/.cache/turbo
+      #     key: turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
+      #     restore-keys: |
+      #       turbo-${{ github.job }}-${{ github.ref_name }}-
+
+      - name: Cache docs next.js cache
         uses: actions/cache@v2
         with:
-          path: node_modules/.cache/turbo
-          key: turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
+          # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
+          path: ${{ github.workspace }}/apps/docs/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            turbo-${{ github.job }}-${{ github.ref_name }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
       - run: ls -la
-      - run: ls -la ./node_modules
-        continue-on-error: true
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build All
         run: npm run build
-
-      - run: ls -la
