--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,7 @@ jobs:
           node-version: 16
           cache: "npm"
 
-      - run: ls -la
-
-      # - name: Cache .turbo
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: node_modules/.cache/turbo
-      #     key: turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
-      #     restore-keys: |
-      #       turbo-${{ github.job }}-${{ github.ref_name }}-
-
-      - name: Cache docs next.js cache
+      - name: Cache Next.JS cache
         uses: actions/cache@v2
         with:
           # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
@@ -45,10 +35,17 @@ jobs:
           # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
-      - run: ls -la
+      - name: Cache .turbo cache
+        uses: actions/cache@v2
+        with:
+          # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
+          path: ${{ github.workspace }}/node_modules/.cache/turbo
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/package-lock.json') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: ${{ runner.os }}-turbo
 
       - name: Install dependencies
         run: npm ci
