--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,11 @@ jobs:
         uses: actions/cache@v2
         with:
           # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
-          path: ${{ github.workspace }}/node_modules/.cache/turbo
+          path: ${{ github.workspace }}/.turbo
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-turbo-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
           # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: ${{ runner.os }}-turbo
+          restore-keys: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}
 
       - name: Install dependencies
         run: npm ci
