--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build",
-    "build:ci": "turbo run build --filter=[HEAD^]",
+    "build": "turbo run build --cache-dir=./.turbo",
+    "build:ci": "turbo run build --cache-dir=./.turbo --filter=[HEAD^]",
     "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
+    "lint": "turbo run lint --cache-dir=./.turbo",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
