updated ci workflow file

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build --cache-dir=./.turbo",
-    "build:ci": "turbo run build --cache-dir=./.turbo --filter=[head^1]",
+    "build": "turbo run build --cache-dir=./.turbo --filter=...[origin/main]",
+    "build:ci": "turbo run build --cache-dir=./.turbo --filter=...[head^1]",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint --cache-dir=./.turbo",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
@@ -22,6 +22,5 @@
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "npm@8.5.1"
 }
