--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
         with:
-          fetch_depth: 2
+          fetch-depth: 2
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
