--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,10 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          ref: main
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
@@ -30,28 +26,30 @@ jobs:
           node-version: 16
           cache: "npm"
 
-      - name: Cache Next.JS cache
+      - name: Setup Next.JS cache
         uses: actions/cache@v2
         with:
-          # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
           path: ${{ github.workspace }}/apps/*/.next/cache
-          # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
-      - name: Cache .turbo cache
+      - name: Setup .turbo cache
         uses: actions/cache@v2
         with:
-          # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
           path: ${{ github.workspace }}/.turbo
-          # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build All
+      - name: Build
         run: npm run build:ci
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Format
+        run: npm run format
+
+      - name: Lint
+        run: npm run lint
