--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  setup:
+    name: Setup Repository and Caches
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -43,9 +43,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build:ci
   lint:
+    name: Lint and Format
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Format
@@ -53,3 +53,11 @@ jobs:
 
       - name: Lint
         run: npm run lint
+
+  build:
+    name: Build
+    needs: [setup, lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build
+        run: npm run build:ci
