--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           restore-keys: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: Format
         run: npm run format
