--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,14 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push events but only for the "main" branch
-  # push:
-  #   branches: ["main"]
+  push:
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    name: Setup, lint, build.
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -30,24 +24,26 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ github.workspace }}/apps/*/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+          # key: nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: nextjs-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
+          # restore-keys: nextjs-${{ hashFiles('**/package-lock.json') }}-
+          restore-keys: nextjs-${{ github.job }}-${{ github.ref_name }}-
 
       - name: Setup .turbo cache
         uses: actions/cache@v2
         with:
           path: ${{ github.workspace }}/.turbo
-          key: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-turbo-${{ github.job }}-${{ github.ref_name }}
+          key: turbo-${{ github.job }}-${{ github.ref_name }}-${{ github.sha }}
+          restore-keys: turbo-${{ github.job }}-${{ github.ref_name }}-
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci --no-audit
 
-      - name: Format
-        run: npm run format
+      # - name: Format
+      #   run: npm run format
 
-      - name: Lint
-        run: npm run lint
+      # - name: Lint
+      #   run: npm run lint
 
       - name: Build
         run: npm run build:ci
