--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           restore-keys: turbo-${{ github.job }}-${{ github.ref_name }}-
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci --no-audit
 
       # - name: Format
       #   run: npm run format
