--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,14 @@
 name: Test
 
 on:
-  pull_request:
+  push:
     branches:
       - main
+    paths:
+      - "apps/docs"
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo do whatever
+      - run: echo deploy docs website
