updated ci workflow file

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,4 +1,6 @@
-name: Test Deploy
+# https://github.com/open-sauced/open-sauced/blob/main/.github/workflows/release.yml
+
+name: Deploy - Production
 
 on:
   push:
@@ -24,8 +26,6 @@ jobs:
               - 'apps/docs/**'
             web:
               - 'apps/web/**'
-  # build if needs.check_changes.outputs.docs == 'true' || needs.check_changes.outputs.web == 'true'
-  # save .next build artifacts
   deploy_docs:
     name: Deploy Docs
     needs: check_changes
