--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -37,5 +37,11 @@ jobs:
       - name: Install dependencies
         run: npm ci --no-audit
 
+      - name: Format
+        run: npm run format
+
+      - name: Lint
+        run: npm run lint
+
       - name: Build
         run: npm run build:ci
