--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,52 +1,11 @@
-name: Test Deploy
+name: Test
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "apps/**"
+  issues:
+    types: [opened]
 
 jobs:
-  check_changes:
-    name: Check File Changes
-    runs-on: ubuntu-latest
-    outputs:
-      docs: ${{ steps.filter.outputs.docs }}
-      web: ${{ steps.filter.outputs.web }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            docs:
-              - 'apps/docs/**'
-            web:
-              - 'apps/web/**'
-  # build if needs.check_changes.outputs.docs == 'true' || needs.check_changes.outputs.web == 'true'
-  # save .next build artifacts
-  deploy_docs:
-    name: Deploy Docs
-    needs: check_changes
-    if: ${{ needs.check_changes.outputs.docs == 'true' }}
+  test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'checkout repo'
-      - run: echo 'pull caches'
-      - run: echo 'npx turbo --filter=@scope/docs'
-      - run: echo 'install deps'
-      - run: echo 'lint & format'
-      - run: echo 'deploy'
-  deploy_web:
-    name: Deploy Web
-    needs: check_changes
-    if: ${{ needs.check_changes.outputs.web == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo 'checkout repo'
-      - run: echo 'pull caches'
-      - run: echo 'npx turbo --filter=@scope/web'
-      - run: echo 'install deps'
-      - run: echo 'lint & format'
-      - run: echo 'deploy'
+      - run: echo ${{ github.event.label }}
