--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,5 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ toJSON(github.event.issue) }}
       - run: echo ${{ github.event.label.name }}
