--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,13 @@
 name: Test
 
-on:
-  issues:
-    types: [opened]
+on: issues
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.event.issue }}
-      - run: echo ${{ github.event.label.name }}
+      - run: echo ${{ github.event.action }}
+      - name: Dump Github Context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
