--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,11 @@
 name: Test
 
-on: issues
+on:
+  issues:
+    types: [labeled]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.event.action }}
-      - name: Dump Github Context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
+      - run: echo ${{github.event.label}}
