--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.8.0",
+    "@scope/ui": "*",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@scope/ui": "*"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
     "@scope/eslint-config-custom": "*",
-    "next-transpile-modules": "9.0.0",
     "@scope/tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
+    "eslint": "7.32.0",
+    "next-transpile-modules": "9.0.0",
     "typescript": "^4.5.3"
   }
 }
