--- a/.github/workflows/swag.yml
+++ b/.github/workflows/swag.yml
@@ -17,7 +17,7 @@ jobs:
           cache: "npm"
       - run: npm ci --no-audit
       - run: cd /apps/docs
-        uses: netlify/actions/cli@master
+      - uses: netlify/actions/cli@master
         with:
           args: deploy --build
         env:
