--- a/.github/workflows/swag.yml
+++ b/.github/workflows/swag.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_deploy:
-    name: Build an Deploy
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +16,9 @@ jobs:
           node-version: 16
           cache: "npm"
       - run: npm ci --no-audit
-      - run: cd /apps/docs
+      - run: ls apps
+        continue-on-error: true
+      - run: cd ${{ github.workspace }/apps/docs
       - uses: netlify/actions/cli@master
         with:
           args: deploy --build
