--- a/apps/docs/netlify.toml
+++ b/apps/docs/netlify.toml
@@ -1,4 +1,7 @@
 # must run deploy --build command from /apps/docs
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
 [build]
   base = "/apps/docs"
   command = "next build"
