--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
+    "check-types": "tsc --noEmit",
     "lint": "next lint"
   },
   "dependencies": {
