--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,12 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**"]
     },
+    "check-types": {
+      "dependsOn": ["^check-types"],
+      "outputs": []
+    },
     "lint": {
+      "dependsOn": ["check-types", "^lint"],
       "outputs": []
     },
     "dev": {
