--- a/.github/workflows/swag-main-stage.yml
+++ b/.github/workflows/swag-main-stage.yml
@@ -19,16 +19,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - if: ${{ github.context.head_ref != 'next' }}
-        uses: actions/github-script@v3
+        uses: actions/github-script@v6
         with:
           script: |
-            core.setFailed('Pull request\'s into main branch must only be done from the next branch.')
-            github.rest.issues.createComment({
+            await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Pull requests into the `main` branch can **only** have the `next` branch as a source.`
+              body: 'Pull requests into the `main` branch can **only** have the `next` branch as a source.'
             })
+
+            core.setFailed()
   get_changes:
     needs: check_head_ref
     if: success()
