--- a/.github/workflows/swag-main-stage.yml
+++ b/.github/workflows/swag-main-stage.yml
@@ -21,15 +21,14 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            if (context.payload.pull_request.head.ref === 'next') {
+            if (context.payload.pull_request.head.ref !== 'next') {
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: `### Pull requests into the **\`main\`** branch can **only** have the **\`next\`** branch as the source.
+                body: `### You can only merge into **\`main`\** from **\`next`\** not ${context.payload.pull_request.head}.
 
-                Please create a new pull request with the **\`next\`** branch as the source.
-                `
+                  Please create a new pull request with the **\`next\`** branch as the source.`
               })
 
               await github.rest.pulls.update({
