--- a/.github/workflows/swag-main-stage.yml
+++ b/.github/workflows/swag-main-stage.yml
@@ -19,27 +19,36 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            if (context.payload.pull_request.head.ref !== 'next') {
-               await github.rest.issues.createComment({
-                 owner: context.repo.owner,
-                 repo: context.repo.repo,
-                 issue_number: context.issue.number,
-                 body: `### You can only merge into **\`main\`** from **\`next\`** not **\`context.payload.pull_request.head\`**.
+            if (context.payload.pull_request.head.ref !== "next") {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `### You can only merge into **\`main\`** from **\`next\`** not **\`context.payload.pull_request.head\`**.
+                
+                Please create a new pull request with the **\`next\`** branch as the source.`
+              });
 
-                   Please create a new pull request with the **\`next\`** branch as the source.`
-               })
+              await github.rest.pulls.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number,
+                state: "closed"
+              });
 
-               await github.rest.pulls.update({
-                 owner: context.repo.owner,
-                 repo: context.repo.repo,
-                 pull_number: context.issue.number,
-                 state: 'closed'
-               })
+              core.setFailed();
+            } else {
+              core.info("Head ref is next... continuing.");
 
-               core.setFailed()
-             } else {
-               core.info('Head ref is next... continuing.')
-             }
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `### You can only merge into **\`main\`** from **\`next\`** not **\`context.payload.pull_request.head\`**.
+
+                Please create a new pull request with the **\`next\`** branch as the source.`
+              });
+            }
   get_changes:
     needs: check_source_branch
     if: success()
@@ -60,8 +69,9 @@ jobs:
               - 'apps/docs/**'
             web:
               - 'apps/web/**'
-  # build_and_deploy:
-  #   name: Build and Deploy
+  # build_and_deploy_docs:
+  #   name: Build and Deploy Docs
+  #   if: ${{ needs.get_changes.outputs.docs == 'true' }}
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v2
@@ -77,3 +87,14 @@ jobs:
   #         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   #       working-directory: ./apps/docs
   #       run: netlify deploy --build
+  #     - uses: actions/github-script@v6
+  #       with:
+  #         script: |
+  #           await github.rest.issues.createComment({
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             issue_number: context.issue.number,
+  #             body: `### You can only merge into **\`main\`** from **\`next\`** not **\`context.payload.pull_request.head\`**.
+
+  #               Please create a new pull request with the **\`next\`** branch as the source.`
+  #           })
