--- a/.github/workflows/swag-main-stage.yml
+++ b/.github/workflows/swag-main-stage.yml
@@ -24,8 +24,8 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: `### You can only merge into **\`main\`** from **\`next\`** not **\`${ context.payload.pull_request.head }\`**.
-                
+                body: `### You can only merge into **\`main\`** from **\`next\`** not **\`${ context.payload.pull_request.head.ref}\`**.
+
                 Please create a new pull request with the **\`next\`** branch as the source.`
               });
 
