--- a/.github/workflows/swag-main-stage.yml
+++ b/.github/workflows/swag-main-stage.yml
@@ -1,5 +1,3 @@
-# https://docs.github.com/en/actions/using-workflows/reusing-workflows
-
 name: Deploy to Staging on Pull Request to Main
 
 on:
@@ -64,6 +62,13 @@ jobs:
               - 'apps/web/**'
             packages:
               - 'packages/**'
+  # do full build of monorepo. upload .next folder after build for each app
+  # - always build monorepo no matter what changed. if nothing changed then it should >>> FULL TURBO <<<
+  # - this way we can cache .npm folder after npm ci to hopefully speed up install
+  # - and .turbo and .next folders after build
+  # - and also this way we can split all this crap into seperate workflow files
+  # - and only netlify deploy --build the changed apps
+  # - https://docs.github.com/en/actions/using-workflows/reusing-workflows
   build_and_deploy_docs:
     needs: get_changes
     name: Build and Deploy Docs
@@ -73,29 +78,45 @@ jobs:
       url: https://staging--ibcarr-testing.netlify.app
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Setup Node v16
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      - uses: actions/cache@v2
+
+      - name: Cache .npm
+        uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: npm-
-      - run: npm ci --ignore-scripts
-      - run: npm install --save-dev netlify-cli
-      - uses: actions/cache@v2
+          key: ${{ github.head_ref }}-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: ${{ github.head_ref }}-npm-
+
+      - name: Install Dependencies
+        run: npm ci --ignore-scripts
+
+      - name: Install netlify-cli
+        run: npm install --save-dev netlify-cli
+
+      - name: Cache .next cache
+        uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/apps/docs/.next/cache
-          key: ${{ github.ref_name }}-docs-nextjs-cache-${{ github.job }}-${{ github.sha }}
-          restore-keys: ${{ github.ref_name }}-docs-nextjs-cache-${{ github.job }}-
+          key: ${{ github.head_ref }}-docs-nextjs-${{ hashFiles('package-lock.json') }}-${{ hashFiles('**.[jt]s', '**[jt]sx') }}
+          restore-keys: ${{ github.head_ref }}-docs-nextjs-${{ hashFiles('package-lock.json') }}-
+
       - name: Deploy
         env:
           NETLIFY_SITE_ID: ${{ secrets.DOCS_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         working-directory: ./apps/docs
         run: netlify deploy --build --alias staging
-      - uses: actions/github-script@v6
+
+      - name: Comment on PR
+        uses: actions/github-script@v6
         with:
           script: |
             await github.rest.issues.createComment({
